@@ -346,7 +346,7 @@ a#search_link.search_link_disable:hover	{cursor:default;}
 .search_input_wrap			{position:relative;}
 .search_icon				{position:absolute; top:28px; left:-40px;}
 
-.settings_search			{padding:40px 50px 20px 50px; box-sizing:border-box; width:960px; margin:0 auto; color:#000; font-size:1.2em; line-height:1.2em; margin-top:20px; position:relative;}
+.settings_search			{padding:40px 50px 20px 50px; box-sizing:border-box; width:960px; margin:0 auto; color:#000; font-size:1.1em; line-height:1.5em; margin-top:20px; position:relative;}
 .hide_search_intro			{position:absolute; top:10px; right:20px; color:#000; width:30px; height:30px; box-sizing:border-box; text-align:center;}
 .hide_search_intro:hover	{cursor:pointer; color:#000;}
 .settings_search p			{padding:25px 0;}
