@@ -3,6 +3,8 @@ Development Portal (2019-11-12 shi)
 Add default-finance-type search test
 Add tag vocab list
 Add translations
+Update filter legend and information
+Add advance filters info
 
 
 Development Portal (2019-11-11 shi)
